--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<div class="card-front_inside">
 				<br> <br> <br>
 				<div class="polaroid">
-					<div class="img" style="/eeshani.jpeg"></div>
+					<div><img src="eeshani.jpeg"></div>
 				</div>
 				<div class="shadow"></div>
 			</div>
